🔧 [build] Refactor map measurement tool and UI components
 - 🛠️ [fix] Sanitize theme colors in mapMeasureTool.js to prevent CSS injection
 - 🛠️ [fix] Improve Escape key handler in mapMeasureTool.js to avoid duplicate event listeners
 - 🚜 [refactor] Change zoom slider implementation in renderMap.js to use DOM methods for better readability
 - 🚜 [refactor] Enhance renderSummaryHelpers.js by creating a reusable function to add options to select elements
 - 🔒 [security] Implement dot-path hardening in mainProcessStateManager.js to prevent prototype pollution
 - 🛠️ [fix] Sanitize theme colors in createElevationProfileButton.js for consistent styling
 - 🔒 [security] Validate external URLs in externalLinkHandlers.js to enhance security against malicious links
 - 🚜 [refactor] Improve filename auto-scroll logic in unifiedControlBar.js to ensure proper cleanup of event listeners

Signed-off-by: Nick2bad4u <20943337+Nick2bad4u@users.noreply.github.com>

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -17,11 +17,10 @@
             "label": "run vitest in electron-app",
             "type": "shell",
             "command": "npm",
-            "args": [
-                "--prefix",
-                "electron-app",
-                "test"
-            ],
+            "args": ["test"],
+            "options": {
+                "cwd": "${workspaceFolder}/electron-app"
+            },
             "isBackground": false,
             "problemMatcher": ["$eslint-stylish"],
             "group": "build"
