--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@ lerna-debug.log*
 electron-app/test-report.junit.xml
 electron-app/logs/
 
+# Repo-root transient outputs
+temp/
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
