✨ [feat] Improves map style selector UX
✨ [feat] Improves map style selector UX
 - Adds friendly labels, ordering, and extra basemap options
 - Hides the default toggle, refines the button, and supports hover open
 - Keeps the selector panel within view with scrolling and resize layout
 - Preserves preferences by mapping legacy and label-based values
🛠️ [fix] Keeps map data points above track overlays
 - Reasserts marker stacking after highlight changes
🛠️ [fix] Replaces the concurrency limiter for legacy runtimes
 - Avoids newer runtime requirements while keeping parallel file loads
🛠️ [fix] Aligns notification handling with event payloads
🧹 [chore] Updates app and docs dependencies
 - Refreshes runtime, lint, and tooling packages
🧹 [chore] Adds editor style linting checks
 - Enables reporting for invalid or needless disables

Signed-off-by: Nick2bad4u <20943337+Nick2bad4u@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,6 +50,10 @@
     "search.exclude": {
         "out": true
     },
+    "stylelint.configFile": "C:\\Users\\Nick\\Dropbox\\PC (2)\\Documents\\GitHub\\FitFileViewer\\stylelint.config.js",
+    "stylelint.reportDescriptionlessDisables": true,
+    "stylelint.reportInvalidScopeDisables": true,
+    "stylelint.reportNeedlessDisables": true,
     "typescript.preferences.includePackageJsonAutoImports": "on",
     "typescript.suggest.autoImports": true,
     "typescript.tsc.autoDetect": "off",
