🧪 [test] Aligns tests with settings state
🧪 [test] 🧭 Updates unit and UI tests to use settings state for preferences, improving determinism
🧹 [chore] ⚙️ Runs Vitest via node with single worker and caps Windows workers to reduce flakiness
🧪 [test] 🧰 Loads env setup before workers to ensure safe globals

Signed-off-by: Nick2bad4u <20943337+Nick2bad4u@users.noreply.github.com>

--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -240,18 +240,18 @@
         "prettier:fix": "prettier . --cache --cache-location=.cache/.prettier-cache --cache-strategy=content --write",
         "start": "electron . --inspect=9229 --remote-debugging-port=9222",
         "start-prod": "cross-env ELECTRON_IS_DEV=0 electron .",
-        "test": "cross-env NODE_OPTIONS=\"--max-old-space-size=8192 --require ./tests/env-setup.js\" vitest --run --reporter=dot --silent",
-        "test:changed": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest --changed --run --reporter=dot --silent",
-        "test:ci": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest --run --coverage --reporter=dot --silent",
-        "test:coverage": "cross-env NODE_OPTIONS=\"--max-old-space-size=8192 --require ./tests/env-setup.js\" vitest --coverage --run --reporter=dot --silent",
-        "test:coverage-changed": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest --coverage --changed --run --reporter=dot --silent",
-        "test:coverage:enhanced": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest --config vitest.config.enhanced.js --coverage --run --reporter=dot --silent",
+        "test": "node --max-old-space-size=8192 ./node_modules/vitest/vitest.mjs --run --reporter=dot --silent --maxWorkers 1",
+        "test:changed": "node --max-old-space-size=8192 ./node_modules/vitest/vitest.mjs --changed --run --reporter=dot --silent --maxWorkers 1",
+        "test:ci": "node --max-old-space-size=8192 ./node_modules/vitest/vitest.mjs --run --coverage --reporter=dot --silent --maxWorkers 1",
+        "test:coverage": "node --max-old-space-size=8192 ./node_modules/vitest/vitest.mjs --coverage --run --reporter=dot --silent --maxWorkers 1",
+        "test:coverage-changed": "node --max-old-space-size=8192 ./node_modules/vitest/vitest.mjs --coverage --changed --run --reporter=dot --silent --maxWorkers 1",
+        "test:coverage:enhanced": "node --max-old-space-size=8192 ./node_modules/vitest/vitest.mjs --config vitest.config.enhanced.js --coverage --run --reporter=dot --silent --maxWorkers 1",
         "test:e2e": "jest --testPathPattern=e2e",
-        "test:enhanced": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest --config vitest.config.enhanced.js --run --reporter=dot --silent",
-        "test:integration": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest --run tests/integration",
+        "test:enhanced": "node --max-old-space-size=8192 ./node_modules/vitest/vitest.mjs --config vitest.config.enhanced.js --run --reporter=dot --silent --maxWorkers 1",
+        "test:integration": "node --max-old-space-size=8192 ./node_modules/vitest/vitest.mjs --run tests/integration --maxWorkers 1",
         "test:jest": "jest",
-        "test:tabs": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest --run --reporter=verbose tests/unit/tabs",
-        "test:unit": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest --run tests/unit",
+        "test:tabs": "node --max-old-space-size=8192 ./node_modules/vitest/vitest.mjs --run --reporter=verbose tests/unit/tabs --maxWorkers 1",
+        "test:unit": "node --max-old-space-size=8192 ./node_modules/vitest/vitest.mjs --run tests/unit --maxWorkers 1",
         "test:watch": "vitest --watch",
         "test:watch-changed": "vitest --watch --changed",
         "tests:convert-to-ts": "node ./scripts/convert-tests-to-ts.mjs",
