⚡ [perf] Improve chart render stability
⚡ [perf] Adds render locking and queued follow-up work to avoid concurrent chart updates and tab flicker
⚡ [perf] Defers hover effects, suppresses background loading/notifications, and auto-tunes animations to keep rendering responsive
⚡ [perf] Introduces cache prewarming and safer max-point defaults to speed first chart view without UI freezes
🛠️ [fix] Resolves mixed-case record keys and gates verbose chart logging behind a dev flag
🧹 [chore] Updates dependencies, scripts, formatting, and adjusts tests/mocks

Signed-off-by: Nick2bad4u <20943337+Nick2bad4u@users.noreply.github.com>

--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -260,7 +260,7 @@
         "update-changelog": "powershell -ExecutionPolicy Bypass -File .\\Update-ChangeLogs.ps1",
         "update-changelog:all": "powershell -ExecutionPolicy Bypass -File .\\Update-ChangeLogs.ps1",
         "update-changelog:latest": "powershell -ExecutionPolicy Bypass -File .\\Update-ChangeLogs.ps1",
-        "updateDeps": "npx ncu -i --install never && npm install --force"
+        "updateDeps": "npx ncu -i --install never && npm install --force && cd ../docusaurus && npx ncu -i --install never && npm install --force && cd ../electron-app"
     },
     "config": {},
     "dependencies": {
@@ -288,21 +288,21 @@
         "leaflet.fullscreen": "^5.3.0",
         "leaflet.locatecontrol": "^0.86.0",
         "leaflet.markercluster": "^1.5.3",
-        "maplibre-gl": "^5.16.0",
+        "maplibre-gl": "^5.17.0",
         "screenfull": "^6.0.2",
         "zod": "^4.3.6"
     },
     "devDependencies": {
-        "@actions/artifact": "^5.0.2",
-        "@actions/attest": "^2.2.0",
-        "@actions/cache": "^5.0.3",
-        "@actions/core": "^2.0.2",
+        "@actions/artifact": "^5.0.3",
+        "@actions/attest": "^2.2.1",
+        "@actions/cache": "^5.0.4",
+        "@actions/core": "^2.0.3",
         "@actions/exec": "^2.0.0",
-        "@actions/github": "^7.0.0",
-        "@actions/glob": "^0.5.0",
-        "@actions/http-client": "^3.0.1",
+        "@actions/github": "^8.0.1",
+        "@actions/glob": "^0.5.1",
+        "@actions/http-client": "^3.0.2",
         "@actions/io": "^2.0.0",
-        "@actions/tool-cache": "^3.0.0",
+        "@actions/tool-cache": "^3.0.1",
         "@eslint/css": "^0.14.1",
         "@eslint/js": "^9.39.2",
         "@eslint/json": "^0.14.0",
@@ -314,9 +314,9 @@
         "@types/jest": "^30.0.0",
         "@types/jsdom": "^27.0.0",
         "@types/mocha": "^10.0.10",
-        "@typescript-eslint/eslint-plugin": "^8.53.1",
+        "@typescript-eslint/eslint-plugin": "^8.54.0",
         "@vitest/coverage-v8": "^4.0.18",
-        "baseline-browser-mapping": "^2.9.17",
+        "baseline-browser-mapping": "^2.9.18",
         "color": "^5.0.3",
         "cross-env": "^10.1.0",
         "electron": "^40.0.0",
@@ -329,7 +329,7 @@
         "eslint-plugin-unicorn": "^62.0.0",
         "fast-check": "^4.5.3",
         "git-cliff": "^2.12.0",
-        "globals": "^17.0.0",
+        "globals": "^17.2.0",
         "jsdom": "^27.4.0",
         "makensis": "^3.0.3",
         "postcss": "^8.5.6",
