--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -142,7 +142,7 @@ jobs:
                         windows-latest,
                         macos-15,
                         macos-latest,
-                        macos-13,
+                        macos-15-intel,
                     ]
                 arch: [x64, ia32, arm64]
                 exclude:
@@ -155,9 +155,9 @@ jobs:
                       arch: ia32
                     - os: macos-15
                       arch: x64
-                    - os: macos-13
+                    - os: macos-15-intel
                       arch: ia32
-                    - os: macos-13
+                    - os: macos-15-intel
                       arch: arm64
                     # Exclude Ubuntu with ia32 and arm64 architectures as they are not commonly used and not officially supported except for ubuntu-24.04-arm/arm64
                     - os: ubuntu-latest
@@ -282,7 +282,7 @@ jobs:
                     npx electron-builder --arm64
                   elif [[ "${{ matrix.os }}" == "macos-latest" ]]; then
                     npx electron-builder --universal
-                  elif [[ "${{ matrix.os }}" == "macos-13" ]]; then
+                  elif [[ "${{ matrix.os }}" == "macos-15-intel" ]]; then
                     npx electron-builder --mac --${{ matrix.arch }}
                   elif [[ "${{ matrix.os }}" == "windows-latest" ]]; then
                     if [[ "${{ matrix.arch }}" == "x64" ]]; then
