--- a/electron-app/.vscode/tasks.json
+++ b/electron-app/.vscode/tasks.json
@@ -1,12 +1,12 @@
 {
-    "version": "2.0.0",
     "tasks": [
         {
-            "label": "Run High Altitude Test",
-            "type": "shell",
             "command": "npm run test -- tests/unit/utils/data/processing/estimateCyclingPower.highAltitude.test.ts > ../temp/task_test_output.txt 2>&1",
+            "group": "test",
             "isBackground": false,
-            "group": "test"
+            "label": "Run High Altitude Test",
+            "type": "shell"
         }
-    ]
+    ],
+    "version": "2.0.0"
 }
