--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -303,19 +303,28 @@
         "@actions/http-client": "^4.0.0",
         "@actions/io": "^3.0.2",
         "@actions/tool-cache": "^4.0.0",
+        "@awmottaz/prettier-plugin-void-html": "^2.0.0",
         "@eslint/css": "^0.14.1",
         "@eslint/js": "^9.39.2",
         "@eslint/json": "^0.14.0",
         "@eslint/markdown": "^7.5.1",
+        "@html-eslint/eslint-plugin": "^0.54.0",
+        "@html-eslint/parser": "^0.54.0",
         "@kurkle/color": "^0.4.0",
         "@microsoft/eslint-formatter-sarif": "^3.1.0",
+        "@prettier/plugin-xml": "^3.4.2",
+        "@softonus/prettier-plugin-duplicate-remover": "^1.1.2",
         "@testing-library/dom": "^10.4.1",
         "@testing-library/user-event": "^14.6.1",
+        "@types/eslint-config-prettier": "^6.11.3",
+        "@types/eslint-plugin-prettier": "^3.1.3",
         "@types/jest": "^30.0.0",
         "@types/jsdom": "^27.0.0",
         "@types/mocha": "^10.0.10",
         "@typescript-eslint/eslint-plugin": "^8.54.0",
+        "@typescript-eslint/parser": "^8.54.0",
         "@vitest/coverage-v8": "^4.0.18",
+        "@vitest/eslint-plugin": "^1.6.6",
         "baseline-browser-mapping": "^2.9.19",
         "color": "^5.0.3",
         "cross-env": "^10.1.0",
@@ -323,33 +332,76 @@
         "electron-builder": "^26.4.0",
         "electron-builder-squirrel-windows": "^26.4.0",
         "eslint": "^9.39.2",
+        "eslint-config-flat-gitignore": "^2.1.0",
         "eslint-config-prettier": "^10.1.8",
+        "eslint-mdx": "^3.6.2",
+        "eslint-plugin-compat": "^6.1.0",
+        "eslint-plugin-depend": "^1.4.0",
+        "eslint-plugin-import-x": "^4.16.1",
+        "eslint-plugin-jsdoc": "^62.5.0",
+        "eslint-plugin-json-schema-validator": "^6.0.3",
+        "eslint-plugin-jsonc": "^2.21.0",
+        "eslint-plugin-jsx-a11y": "^6.10.2",
+        "eslint-plugin-math": "^0.13.1",
+        "eslint-plugin-mdx": "^3.6.2",
         "eslint-plugin-n": "^17.23.2",
+        "eslint-plugin-no-secrets": "^2.2.1",
+        "eslint-plugin-no-unsanitized": "^4.1.4",
+        "eslint-plugin-package-json": "^0.88.2",
         "eslint-plugin-perfectionist": "^5.4.0",
+        "eslint-plugin-playwright": "^2.5.1",
+        "eslint-plugin-prefer-arrow": "^1.2.3",
+        "eslint-plugin-prettier": "^5.5.5",
+        "eslint-plugin-promise": "^7.2.1",
+        "eslint-plugin-react": "^7.37.5",
+        "eslint-plugin-react-hooks": "^7.0.1",
+        "eslint-plugin-react-perf": "^3.3.3",
+        "eslint-plugin-redos": "^4.5.0",
+        "eslint-plugin-regexp": "^3.0.0",
+        "eslint-plugin-security": "^3.0.1",
+        "eslint-plugin-sonarjs": "^3.0.6",
+        "eslint-plugin-sort-class-members": "^1.21.0",
+        "eslint-plugin-storybook": "^10.2.1",
+        "eslint-plugin-styled-components-a11y": "^2.2.1",
+        "eslint-plugin-testing-library": "^7.15.4",
+        "eslint-plugin-toml": "^1.0.3",
         "eslint-plugin-unicorn": "^62.0.0",
+        "eslint-plugin-unused-imports": "^4.3.0",
+        "eslint-plugin-write-good-comments": "^0.2.0",
+        "eslint-plugin-xss": "^0.1.12",
+        "eslint-plugin-yml": "^3.0.0",
         "fast-check": "^4.5.3",
         "git-cliff": "^2.12.0",
         "globals": "^17.2.0",
         "jsdom": "^27.4.0",
+        "jsonc-eslint-parser": "^2.4.2",
         "makensis": "^3.0.3",
         "postcss": "^8.5.6",
         "postcss-value-parser": "^4.2.0",
         "prettier": "^3.8.1",
         "prettier-eslint": "^16.4.2",
+        "prettier-markdown-table": "^1.0.3",
         "prettier-plugin-ini": "^1.3.0",
         "prettier-plugin-interpolated-html-tags": "^2.0.1",
         "prettier-plugin-jsdoc": "^1.8.0",
+        "prettier-plugin-jsdoc-type": "^0.2.0",
         "prettier-plugin-merge": "^0.9.0",
         "prettier-plugin-multiline-arrays": "^4.1.3",
         "prettier-plugin-packagejson": "^3.0.0",
         "prettier-plugin-properties": "^0.3.1",
+        "prettier-plugin-sh": "^0.18.0",
         "prettier-plugin-sort-json": "^4.2.0",
         "prettier-plugin-sql": "^0.19.2",
         "prettier-plugin-tailwindcss": "^0.7.2",
+        "prettier-plugin-toml": "^2.0.6",
+        "remark-preset-prettier": "^2.0.2",
         "stylelint-config-standard": "^40.0.0",
+        "stylelint-prettier": "^5.0.3",
+        "toml-eslint-parser": "^1.0.3",
         "ts-migrate": "^0.1.35",
         "ts-migrate-plugins": "^0.1.35",
-        "vitest": "^4.0.18"
+        "vitest": "^4.0.18",
+        "yaml-eslint-parser": "^2.0.0"
     },
     "packageManager": "npm@11.8.0",
     "engines": {
