--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -236,8 +236,8 @@
         "lint:css:fix": "npx stylelint \"**/*.css\" --config stylelint.config.js --fix",
         "lint:fix": "npm run lint",
         "package": "electron-builder --dir",
-        "prettier": "prettier . --cache --cache-location=.cache/.prettier-cache --cache-strategy=content --check",
-        "prettier:fix": "prettier . --cache --cache-location=.cache/.prettier-cache --cache-strategy=content --write",
+        "prettier": "prettier . --log-level warn --cache --cache-location=.cache/.prettier-cache --cache-strategy=content --check",
+        "prettier:fix": "prettier . --log-level warn --cache --cache-location=.cache/.prettier-cache --cache-strategy=content --write",
         "start": "electron . --inspect=9229 --remote-debugging-port=9222",
         "start-prod": "cross-env ELECTRON_IS_DEV=0 electron .",
         "test": "node --max-old-space-size=8192 ./node_modules/vitest/vitest.mjs --run --reporter=dot --silent --maxWorkers 1",
@@ -271,8 +271,8 @@
         "chart.js": "^4.5.1",
         "chartjs-adapter-date-fns": "^3.0.0",
         "chartjs-plugin-zoom": "^2.2.0",
-        "datatables.net": "^2.3.6",
-        "datatables.net-dt": "^2.3.6",
+        "datatables.net": "^2.3.7",
+        "datatables.net-dt": "^2.3.7",
         "date-fns": "^4.1.0",
         "dompurify": "^3.3.1",
         "electron-conf": "^1.3.0",
@@ -293,7 +293,7 @@
         "zod": "^4.3.6"
     },
     "devDependencies": {
-        "@actions/artifact": "^6.0.0",
+        "@actions/artifact": "^6.1.0",
         "@actions/attest": "^2.2.1",
         "@actions/cache": "^6.0.0",
         "@actions/core": "^3.0.0",
@@ -306,7 +306,7 @@
         "@awmottaz/prettier-plugin-void-html": "^2.0.0",
         "@eslint/css": "^0.14.1",
         "@eslint/js": "^9.39.2",
-        "@eslint/json": "^0.14.0",
+        "@eslint/json": "^1.0.0",
         "@eslint/markdown": "^7.5.1",
         "@html-eslint/eslint-plugin": "^0.54.0",
         "@html-eslint/parser": "^0.54.0",
@@ -317,9 +317,16 @@
         "@testing-library/dom": "^10.4.1",
         "@testing-library/user-event": "^14.6.1",
         "@types/eslint-config-prettier": "^6.11.3",
+        "@types/eslint-plugin-jsx-a11y": "~6.10.1",
         "@types/eslint-plugin-prettier": "^3.1.3",
+        "@types/eslint-plugin-security": "~3.0.1",
+        "@types/hammerjs": "~2.0.46",
         "@types/jest": "^30.0.0",
+        "@types/jquery": "~3.5.33",
         "@types/jsdom": "^27.0.0",
+        "@types/leaflet": "~1.9.21",
+        "@types/leaflet-draw": "~1.0.13",
+        "@types/leaflet.markercluster": "~1.5.6",
         "@types/mocha": "^10.0.10",
         "@typescript-eslint/eslint-plugin": "^8.54.0",
         "@typescript-eslint/parser": "^8.54.0",
@@ -334,6 +341,7 @@
         "eslint": "^9.39.2",
         "eslint-config-flat-gitignore": "^2.1.0",
         "eslint-config-prettier": "^10.1.8",
+        "eslint-import-resolver-typescript": "^4.4.4",
         "eslint-mdx": "^3.6.2",
         "eslint-plugin-compat": "^6.1.0",
         "eslint-plugin-depend": "^1.4.0",
@@ -361,7 +369,7 @@
         "eslint-plugin-security": "^3.0.1",
         "eslint-plugin-sonarjs": "^3.0.6",
         "eslint-plugin-sort-class-members": "^1.21.0",
-        "eslint-plugin-storybook": "^10.2.1",
+        "eslint-plugin-storybook": "^10.2.3",
         "eslint-plugin-styled-components-a11y": "^2.2.1",
         "eslint-plugin-testing-library": "^7.15.4",
         "eslint-plugin-toml": "^1.0.3",
@@ -395,6 +403,7 @@
         "prettier-plugin-tailwindcss": "^0.7.2",
         "prettier-plugin-toml": "^2.0.6",
         "remark-preset-prettier": "^2.0.2",
+        "recheck-jar": "^2.0.0",
         "stylelint-config-standard": "^40.0.0",
         "stylelint-prettier": "^5.0.3",
         "toml-eslint-parser": "^1.0.3",
