--- a/docusaurus/package.json
+++ b/docusaurus/package.json
@@ -16,7 +16,11 @@
         "write-heading-ids": "docusaurus write-heading-ids",
         "typecheck": "tsc --project tsconfig.json",
         "docs:typedoc": "typedoc --options typedoc.json && node scripts/generate-api-categories.mjs",
-        "docs:typedoc:local": "typedoc --options typedoc.local.json && node scripts/generate-api-categories.mjs"
+        "docs:typedoc:local": "typedoc --options typedoc.local.json && node scripts/generate-api-categories.mjs",
+        "lint": "npm run lint:code && npm run lint:content",
+        "lint:code": "cd ../electron-app && npx eslint --cache --cache-strategy content --cache-location .cache/.eslintcache-docusaurus --fix ../docusaurus --ext .js,.jsx,.ts,.tsx",
+        "lint:code:check": "cd ../electron-app && npx eslint --cache --cache-strategy content --cache-location .cache/.eslintcache-docusaurus ../docusaurus --ext .js,.jsx,.ts,.tsx",
+        "lint:content": "markdownlint-cli2 \"docs/**/*.{md,mdx}\" \"blog/**/*.{md,mdx}\" \"src/**/*.{md,mdx}\" --config ../.markdownlint.json"
     },
     "dependencies": {
         "@docusaurus/core": "^3.9.2",
@@ -41,6 +45,7 @@
         "@types/react": "^19.2.10",
         "@types/react-dom": "^19.2.3",
         "clsx": "^2.1.1",
+        "markdownlint-cli2": "^0.14.0",
         "prism-react-renderer": "^2.4.1",
         "typedoc": "^0.28.16",
         "typedoc-docusaurus-theme": "^1.4.2",
