✨ [feat] Add auxiliary heart rate support
✨ [feat] Adds auxiliary heart rate detection and visibility
 - Normalizes auxiliary HR from varied record keys and developer fields for charts, maps, tooltips, and quality metrics
 - Adds labels, colors, units, and filters so auxiliary HR renders consistently
🚜 [refactor] Standardizes tab and content handling with flexible IDs
 - Adds ID variant helpers and updates tab routing and DOM lookups to tolerate mixed naming styles
 - Improves chart rendering fallbacks when containers or DOM APIs differ
🛠️ [fix] Hardens IPC listener cleanup in runtime bridges
 - Supports alternate listener removal APIs in test or mocked environments
🧪 [test] Expands coverage for auxiliary heart rate and chart metadata
 - Updates expectations for new metric counts and labels
🧹 [chore] Refreshes linting rules, scripts, and dependencies
 - Aligns markdown linting, root lint config, and tooling versions

Signed-off-by: Nick2bad4u <20943337+Nick2bad4u@users.noreply.github.com>

--- a/docusaurus/package.json
+++ b/docusaurus/package.json
@@ -18,16 +18,16 @@
         "docs:typedoc": "typedoc --options typedoc.json && node scripts/generate-api-categories.mjs",
         "docs:typedoc:local": "typedoc --options typedoc.local.json && node scripts/generate-api-categories.mjs",
         "lint": "npm run lint:code && npm run lint:content",
-        "lint:code": "cd ../electron-app && npx eslint --cache --cache-strategy content --cache-location .cache/.eslintcache-docusaurus --fix ../docusaurus --ext .js,.jsx,.ts,.tsx",
-        "lint:code:check": "cd ../electron-app && npx eslint --cache --cache-strategy content --cache-location .cache/.eslintcache-docusaurus ../docusaurus --ext .js,.jsx,.ts,.tsx",
-        "lint:content": "markdownlint-cli2 \"docs/**/*.{md,mdx}\" \"blog/**/*.{md,mdx}\" \"src/**/*.{md,mdx}\" --config ../.markdownlint.json"
+        "lint:code": "cd .. && node ./electron-app/node_modules/eslint/bin/eslint.js --config ./eslint.config.mjs --cache --cache-strategy content --cache-location electron-app/.cache/.eslintcache-docusaurus --fix docusaurus/**/*.{js,jsx,ts,tsx}",
+        "lint:code:check": "cd .. && node ./electron-app/node_modules/eslint/bin/eslint.js --config ./eslint.config.mjs --cache --cache-strategy content --cache-location electron-app/.cache/.eslintcache-docusaurus docusaurus/**/*.{js,jsx,ts,tsx}",
+        "lint:content": "npx --yes markdownlint-cli2 \"docs/**/*.{md,mdx}\" \"blog/**/*.{md,mdx}\" \"src/**/*.{md,mdx}\" --config ../.markdownlint.json"
     },
     "dependencies": {
         "@docusaurus/core": "^3.9.2",
         "@docusaurus/preset-classic": "^3.9.2",
         "@docusaurus/theme-live-codeblock": "^3.9.2",
         "@docusaurus/theme-mermaid": "^3.9.2",
-        "@easyops-cn/docusaurus-search-local": "^0.52.3",
+        "@easyops-cn/docusaurus-search-local": "^0.53.0",
         "@mdx-js/react": "^3.1.1",
         "docusaurus-plugin-copy-page-button": "^0.3.5",
         "docusaurus-plugin-image-zoom": "^3.0.1",
@@ -41,18 +41,18 @@
         "@docusaurus/module-type-aliases": "^3.9.2",
         "@docusaurus/tsconfig": "^3.9.2",
         "@docusaurus/types": "^3.9.2",
-        "@types/node": "^25.1.0",
-        "@types/react": "^19.2.10",
+        "@types/node": "^25.2.2",
+        "@types/react": "^19.2.13",
         "@types/react-dom": "^19.2.3",
         "clsx": "^2.1.1",
-        "markdownlint-cli2": "^0.14.0",
+        "markdownlint-cli2": "^0.20.0",
         "prism-react-renderer": "^2.4.1",
         "typedoc": "^0.28.16",
         "typedoc-docusaurus-theme": "^1.4.2",
         "typedoc-plugin-coverage": "^4.0.2",
-        "typedoc-plugin-dt-links": "^2.0.39",
+        "typedoc-plugin-dt-links": "^2.0.41",
         "typedoc-plugin-external-package-links": "^0.2.0",
-        "typedoc-plugin-markdown": "^4.9.0",
+        "typedoc-plugin-markdown": "^4.10.0",
         "typedoc-plugin-mdn-links": "^5.1.1",
         "typedoc-plugin-missing-exports": "^4.1.2",
         "typedoc-plugin-remark": "^2.0.1",
