--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -304,6 +304,7 @@
         "@actions/io": "^3.0.2",
         "@actions/tool-cache": "^4.0.0",
         "@awmottaz/prettier-plugin-void-html": "^2.0.0",
+        "@docusaurus/eslint-plugin": "^3.9.2",
         "@eslint/css": "^0.14.1",
         "@eslint/js": "^9.39.2",
         "@eslint/json": "^1.0.0",
@@ -402,8 +403,8 @@
         "prettier-plugin-sql": "^0.19.2",
         "prettier-plugin-tailwindcss": "^0.7.2",
         "prettier-plugin-toml": "^2.0.6",
-        "remark-preset-prettier": "^2.0.2",
         "recheck-jar": "^4.5.0",
+        "remark-preset-prettier": "^2.0.2",
         "stylelint-config-standard": "^40.0.0",
         "stylelint-prettier": "^5.0.3",
         "toml-eslint-parser": "^1.0.3",
