🛠️ [fix] Update style property checks for consistency  - 🛠️ Update maxHeight checks in createPowerZoneControls tests to use "0px" instead of "0"  - 🛠️ Update outlineOffset checks in createChartStatusIndicator tests to use "0px" instead of "0"  - 🛠️ Update maxHeight checks in createHRZoneControls tests to use "0px" instead of "0"  - 🛠️ Update maxHeight checks in createPowerZoneControlsSimple tests to use "0px" instead of "0"
✨ [feat] Enhance fullscreen functionality in addFullScreenButton
 - ✨ Refactor fullscreen handling to utilize Electron IPC for fullscreen requests
 - ✨ Implement overlay fullscreen mode as a fallback when native fullscreen is unavailable
 - ✨ Add keyboard shortcut handling for F11 and Escape keys to manage fullscreen state

⚡ [perf] Optimize chart resizing during fullscreen transitions
 - ⚡ Introduce resizeExistingCharts function to handle chart resizing without full re-rendering
 - ⚡ Prevent unnecessary chart re-renders during fullscreen transitions

🎨 [style] Improve code readability and organization
 - 🎨 Clean up comments and structure in addFullScreenButton.js for better clarity
 - 🎨 Refactor variable names and function definitions for consistency

🧪 [test] Update tests for new fullscreen behavior
 - 🧪 Modify tests in addFullScreenButton to reflect changes in fullscreen handling
 - 🧪 Adjust tests in createChartStatusIndicator and createGlobalChartStatusIndicator for updated expectations

📝 [docs] Update ESLint configuration export
 - 📝 Change export statement in eslint.config.mjs for better compatibility with other packages

Signed-off-by: Nick2bad4u <20943337+Nick2bad4u@users.noreply.github.com>

--- a/config.toml
+++ b/config.toml
@@ -5,13 +5,11 @@ model_reasoning_effort = "high"
 model_reasoning_summary = "detailed"
 model_verbosity = "medium"
 sandbox_mode = "danger-full-access"
+
 sandbox_workspace_write.network_access = true
-sandbox_workspace_write.writable_roots = [
-    "C:\\Users\\Nick\\AppData\\Roaming\\uptime-watcher",
-]
+sandbox_workspace_write.writable_roots = [ "C:\\Users\\Nick\\AppData\\Roaming\\uptime-watcher", ]
+
 [mcp.servers.vscode-mcp]
-    args = [
-        "@vscode-mcp/vscode-mcp-server@latest",
-    ]
+    args = [ "@vscode-mcp/vscode-mcp-server@latest", ]
     command = "npx"
     type = "stdio"
