✨ [feat] Enhance project configuration and documentation  - 🛠️ [fix] Add "homepage" format to .ncurc.json for improved package metadata  - 📝 [docs] Update USER_GUIDE.md for better clarity on map controls and export formats  - 🎨 [style] Refactor linting rules in package.json for better consistency  - ⚡ [perf] Optimize ESLint configuration for better performance across multiple directories  - 🚜 [refactor] Improve chart hover effects handling in addChartHoverEffects.js  - 🧪 [test] Update tests for tab visibility to ensure correct display behavior  - 🧹 [chore] Clean up unused styles in index.module.css
Signed-off-by: Nick2bad4u <20943337+Nick2bad4u@users.noreply.github.com>

--- a/docusaurus/package.json
+++ b/docusaurus/package.json
@@ -20,7 +20,7 @@
         "lint": "npm run lint:code && npm run lint:content",
         "lint:code": "cd .. && node ./electron-app/node_modules/eslint/bin/eslint.js --config ./eslint.config.mjs --cache --cache-strategy content --cache-location electron-app/.cache/.eslintcache-docusaurus --fix docusaurus/**/*.{js,jsx,ts,tsx}",
         "lint:code:check": "cd .. && node ./electron-app/node_modules/eslint/bin/eslint.js --config ./eslint.config.mjs --cache --cache-strategy content --cache-location electron-app/.cache/.eslintcache-docusaurus docusaurus/**/*.{js,jsx,ts,tsx}",
-        "lint:content": "npx --yes markdownlint-cli2 \"docs/**/*.{md,mdx}\" \"blog/**/*.{md,mdx}\" \"src/**/*.{md,mdx}\" --config ../.markdownlint.json"
+        "lint:content": "npx --yes markdownlint-cli2 \"docs/**/*.{md,mdx}\" \"!docs/api/**/*.md\" \"blog/**/*.{md,mdx}\" \"src/**/*.{md,mdx}\" --config ../.markdownlint.json"
     },
     "dependencies": {
         "@docusaurus/core": "^3.9.2",
