--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint:docusaurus": "cd docusaurus && npm run lint",
     "lint:docusaurus:content": "cd docusaurus && npm run lint:content",
     "lint:fix": "npm run lint",
-    "lint:root": "cd electron-app && npx eslint --cache --cache-strategy content --cache-location .cache/.eslintcache-root --fix .. --ignore-pattern \"../electron-app/**\" --ignore-pattern \"../docusaurus/**\"",
-    "lint:root:check": "cd electron-app && npx eslint --cache --cache-strategy content --cache-location .cache/.eslintcache-root .. --ignore-pattern \"../electron-app/**\" --ignore-pattern \"../docusaurus/**\""
+    "lint:root": "cd electron-app && npm exec eslint -- --cache --cache-strategy content --cache-location .cache/.eslintcache-root --fix .. --ignore-pattern \"electron-app/**\" --ignore-pattern \"docusaurus/**\"",
+    "lint:root:check": "cd electron-app && npm exec eslint -- --cache --cache-strategy content --cache-location .cache/.eslintcache-root .. --ignore-pattern \"electron-app/**\" --ignore-pattern \"docusaurus/**\""
   }
 }
